--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
     "jinja2>=3.1.6",
+    "mysql-connector-python>=9.3.0",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.2",
