Started User Registration and support for Mysql support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "mysql-connector-python>=9.3.0",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.10",
-    "pydantic>=2.11.2",
+    "pydantic[email]>=2.11.2",
     "pyjwt>=2.10.1",
     "python-decouple>=3.8",
     "python-multipart>=0.0.20",
