--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -25,8 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: uv sync
-      - name: Install Ruff
-        run: uv add ruff
 
       - name: Run Ruff Formatter Check
-        run: uv run ruff check --fix
+        run: |
+          uv run ruff format --check .
