--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
+    "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "mysql-connector-python>=9.3.0",
     "passlib[bcrypt]>=1.7.4",
