Added Paginated response in the endpoints

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -29,3 +29,4 @@ jobs:
       - name: Run Ruff Formatter Check
         run: |
           uv run ruff format --check .
+          uv run ruff check --fix --diff .
