--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "authlib>=1.6.0",
+    "celery>=5.5.3",
     "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
