--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
+    "mariadb>=1.1.13",
     "mysql-connector-python>=9.3.0",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.10",
