Fix:remove passlib support and replace with pwdlib[argon2]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "authlib>=1.6.0",
     "celery>=5.5.3",
     "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
@@ -15,8 +14,10 @@ dependencies = [
     "mysql-connector-python>=9.3.0",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.10",
+    "pwdlib[argon2]>=0.2.1",
     "pydantic[email]>=2.11.2",
     "pyjwt>=2.10.1",
+    "pytest>=8.4.2",
     "python-decouple>=3.8",
     "python-multipart>=0.0.20",
     "ruff>=0.11.3",
