--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       timeout: 5s
       retries: 5  
 
-  api: &api
+  api:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
