--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,20 @@ version: '3.8'
 services:
   postgres:
     image: postgres:12
-    container_name: postgres
+    container_name: postgres_metadata
     ports:
-        - "5432:5432"
+      - "5433:5432"
     env_file:
       - ./envs/.env.local    
-   
+    environment:
+      POSTGRES_DB: "bus_metadata"
     restart: always # Ensure the database is created
     volumes: 
         - pg_data:/var/lib/postgresql/data  
     networks:
       - app_network    
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-U",  "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d bus_metadata"]
       interval: 5s
       timeout: 5s
       retries: 5  
